# sigmorph

./: README.md  pyproject.toml
examples/: suspicious_powershell.json
src/sigmorph/: __init__.py  candidate.py  cli.py  explain.py  generalize.py  ingest.py  models.py  normalize.py  overfit.py  score.py  stability.py  synth.py
src/sigmorph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sigmorph/sigma/: builder.py
tests/: test_basic.py
